welcome.lessons.welcome.bat.bool1.HasTeen.scala.error
hasTeen:2: error: '(' expected but '{' found.
                                             else if {((b>=13)&&(b<=19)) {return true} 
                                                     ^hasTeen:4: error: illegal start of simple expression
                                                               else {return false}}}} 
                                                                                    ^